# open-clockwork

cli/: Cargo.toml  build.rs
cli/src/: config.rs  parser.rs
cli/src/processor/: localnet.rs
plugin/: Cargo.toml  build.rs
plugin/src/: events.rs  plugin.rs
plugin/src/builders/: thread_exec.rs
plugin/src/executors/: tx.rs
plugin/src/observers/: thread.rs
plugin/utils/: Cargo.toml
programs/network/: Cargo.toml
programs/thread/: Cargo.toml
programs/thread/v1/: Cargo.toml
programs/webhook/: Cargo.toml
programs/webhook/src/instructions/: webhook_create.rs
relayer/: Cargo.toml
relayer/api/: Cargo.toml
relayer/src/: main.rs
scripts/: build-all.sh
scripts/ci/: rust-version.sh  solana-version.sh
sdk/: Cargo.toml
utils/: Cargo.toml
