[package]
name = "clockwork-cli"
version = "2.0.20"
description = "Command line interface for Clockwork"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/cli"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"

[features]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "clockwork-network-program/idl-build",
    "clockwork-thread-program/idl-build",
    "clockwork-webhook-program/idl-build",
    "clockwork-utils/idl-build",
]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
anchor-spl = { features = ["mint", "token"], git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
anyhow = "1.0.61"
bincode = "1.3.3"
bzip2 = "0.5.0"
clap = { version = "4.5.23", features = ["derive"] }
clockwork-cron = { path = "../cron", version = "=2.0.20" }
clockwork-network-program = { path = "../programs/network", version = "=2.0.20", features = ["no-entrypoint"] }
clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.20" }
clockwork-plugin-utils= { path = "../plugin/utils", version = "=2.0.20" }
clockwork-thread-program = { path = "../programs/thread", version = "=2.0.20", features = ["no-entrypoint"] }
clockwork-utils = { path = "../utils", version = "=2.0.20" }
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.20", features = ["no-entrypoint"] }
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
dirs-next = "2.0.0"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.4"
solana-account-decoder = "2.1.5"
solana-client = "2.1.5"
solana-clap-utils = "2.1.5"
solana-cli-config = "2.1.5"
solana-sdk = "2.1.5"
spl-associated-token-account = "6.0.0"
spl-memo = "6.0.0"
spl-token = "7.0.0"
tar = "0.4"
thiserror = "2.0.6"
termcolor = "1.2.0"

[[bin]]
name = "clockwork"
path = "src/main.rs"

[build-dependencies]
cargo_metadata = "=0.14.0"
