[package]
name = "clockwork_plugin"
version = "2.0.20"
# this needs to match whatever solana uses!
rust-version = "1.81.0"
edition = "2021"
description = "Clockwork plugin for Solana validators"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/plugin"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
build = "build.rs"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "clockwork_plugin"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
async_once = "0.2.6"
async-trait = "0.1.64"
bincode = "1.3.3"
bs58 = "0.5.1"
bugsnag = "0.2.1"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
clockwork-cron = { path = "../cron", version = "=2.0.20" }
clockwork-network-program = { path = "../programs/network", version = "=2.0.20" }
clockwork-plugin-utils = { path = "utils", version = "=2.0.20" }
clockwork-relayer-api = { path = "../relayer/api", version = "=2.0.20" }
clockwork-thread-program = { package = "clockwork-thread-program", path = "../programs/thread", version = "=2.0.20" }
clockwork-thread-program-v1 = { package = "clockwork-thread-program-v1", path = "../programs/thread/v1", version = "=1.4.4" }
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.20" }
clockwork-utils = { path = "../utils", version = "=2.0.20" }
lazy_static = "1.4.0"
log = "0.4"
prost = "0.13.4"
pyth-sdk-solana = "0.10.1"
reqwest = "0.12.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3.1"
solana-account-decoder = "2.1.5"
solana-client = "2.1.5"
agave-geyser-plugin-interface = "^2.1.5"
solana-logger = "2.1.5"
solana-program = "2.1.5"
solana-sdk = "2.1.5"
solana-transaction-status = "2.1.5"
thiserror = "2.0.6"
tokio = "1.18.4"
futures = "0.3.26"
static-pubkey = "1.0.3"
solana-quic-client = "2.1.5"

[build-dependencies]
cargo_metadata = "=0.14.0"
rustc_version = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
