[package]
name = "clockwork-relayer"
version = "2.0.20"
edition = "2021"
description = "Clockwork relayer for webhook requests"
license = "AGPL-3.0-or-later"
homepage = "https://clockwork.xyz"
repository = "https://github.com/clockwork-xyz/relayer"
documentation = "https://docs.clockwork.xyz"
readme = "./README.md"
keywords = ["solana"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "0453672" }
byte-unit = "5.1.6"
clockwork-webhook-program = { path = "../programs/webhook", version = "=2.0.20" }
clockwork-relayer-api = { path = "api", version = "=2.0.20" }
curve25519-dalek = "4.1.3"
lazy_static = "1.4.0"
reqwest = "0.12.9"
serde = "1.0.152"
serde_json = "1.0.94"
solana-client = "2.1.5"
solana-zk-token-sdk = "2.1.5"
solana-sdk = "2.1.5"
tokio = "1.26.0"
bincode = "1.3.3"
rayon = "1.7.0"
regex = "1.7.1"
